MAINTAINERCLEANFILES = Makefile.in Makefile
RELEASE = $(LT_VERSION) -release $(LT_RELEASE)
AM_CXXFLAGS = $(UCOMMON_FLAGS)
EXTRA_DIST = config.h.in

pkgincludedir = $(includedir)/ucommon
pkginclude_HEADERS = object.h linked.h string.h file.h counter.h \
	bitmap.h timers.h socket.h access.h config.h export.h

include_HEADERS = ucommon.h

