MAINTAINERCLEANFILES = Makefile.in Makefile
RELEASE = $(LT_VERSION) -release $(LT_RELEASE)
AM_CXXFLAGS = $(UCOMMON_FLAGS)

pkgincludedir = $(includedir)/ucommon
pkginclude_HEADERS = object.h linked.h string.h file.h counter.h vector.h \
	bitmap.h timers.h socket.h access.h process.h export.h misc.h \
	platform.h ucommon.h

