MAINTAINERCLEANFILES = Makefile.in Makefile
RELEASE = $(LT_VERSION) -release $(LT_RELEASE)
AM_CXXFLAGS = $(UCOMMON_FLAGS)

pkgincludedir = $(includedir)/ucommon
pkginclude_HEADERS = object.h linked.h string.h counter.h vector.h \
	bitmap.h timers.h socket.h access.h export.h thread.h \
	memory.h platform.h ucommon.h

